appeals edited (per disc with BB)

--- a/appeals.tex
+++ b/appeals.tex
@@ -5,8 +5,8 @@ Appeal Committee}
 
 \npara{1} The procedures detailed below will be followed in cases where a
 student wishes to appeal an academic procedure, other than a grade, on the set
-of criteria detailed in section 2 below.  \fixme{contradiction: near the end we
-see appeals of grades} 
+of criteria detailed in section 2 below. (Grade appeals are handled by the
+University's Registrar.)
 
 \npara{2} The regulations and procedures given below cover appeals launched by
 both undergraduate and graduate students in the Department of Oceanography at
@@ -41,11 +41,12 @@ appealed as oral portions cannot be regraded.
 Graduate Studies in the first instance. 
 
 \npara{3} Appeals of course examination grades (re-grading) are direct through
-the University Registrar's Office, and not the Department of Oceanography.
-Some clarification on the method of reassessment is given below in
-section~\ref{sec:grade_reassessment}; otherwise the appellant must follow the
-procedures set by the Registrar. \fixme{should we just leave the rules to the
-registrar, thus axiomatically avoiding contradiction?}
+the University Registrar's Office.
+%, and not the Department of Oceanography.
+%Some clarification on the method of reassessment is given below in
+%section~\ref{sec:grade_reassessment}; otherwise the appellant must follow the
+%procedures set by the Registrar. \fixme{should we just leave the rules to the
+%registrar, thus axiomatically avoiding contradiction?}
  
 \npara{4} The grounds for appeal are limited to the following:
 \begin{enumerate} \item procedural unfairness \item bias \item irregularity in
@@ -82,18 +83,19 @@ appealed.
 \begin{enumerate}
 
 \item A description of the exact nature of the appeal, including a summary of
-events and chronology; 
+    events and chronology
 
 \item Specific details of the alleged unfairness, bias or irregularity, and any
-other relevant consideration or information; and 
+    other relevant consideration or information
 
 \item The requested resolution of the appeal, which is limited to a reasonable
-academic action(s). 
+    academic action(s). 
 
 \end{enumerate}
 
 \npara{7} The submission of an appeal will engender the following actions by
 the Chair of the Department:
+
 \begin{enumerate}
 
 \item The Chair will contact both the appellant and the person responsible for
@@ -121,9 +123,9 @@ specify.
 \npara{2} The Panel does not have fixed membership.  Instead, it will consist
 of three faculty members, chosen on a fixed rotating basis from all the faculty
 in the Department.  The professor(s) responsible for the process being appealed
-will be excluded.  For graduate students, the student’s supervisor or
-co-supervisors, or for undergraduates, the student’s honors supervisor will
-also be excluded from the list. \fixme{not all undergrads are in honours} 
+will be excluded.  For graduate students, the student's supervisor or
+co-supervisors, or for undergraduates, the student's honors supervisor (if
+applicable) will also be excluded from the list.
 
 \npara{3} An appropriate graduate student (for undergraduate appeals) or
 Post-doctoral fellow (for graduate appeals) will constitute the fourth and
@@ -141,25 +143,20 @@ the first opportunity when all involved, i.e., appellant, the faculty member
 who owns the process, and the Panel members can meet to hear verbal arguments
 on the appeal, but preferably within three weeks of constitution of the Panel.
 If there is no \emph{prima facie} case, the Panel will inform the Chair and the
-appeal will be dismissed at the Departmental level. \fixme{edit: italic for
-Latin}
+appeal will be dismissed at the Departmental level.
 
-\npara{6} If a Hearing is convened, the Panel will chose a Chair who will
-control and direct all communication.  \fixme{part 5 is missing}
+\npara{5} If a Hearing is convened, the Panel will chose a Chair who will
+control and direct all communication.
 
-\npara{7} The Chair of the Panel will make the faculty owner of the process
+\npara{6} The Chair of the Panel will make the faculty owner of the process
 aware of the appeal and provide, in a timely manner, a copy of the appeal
 document to the process-owner (faculty member).  
 
-\npara{8} Before the Hearing, the \add{process} owner will provide \delete{to}
-the Panel with a written rebuttal to the appeal within 5 working days of the
-appeal being received.  (An exception will be made to accommodate persons at
-sea.)  The Panel will forward that rebuttal to the appellant.\fixme{Is sea time
-the only exception? What about serious medical issues, etc? I imagine there is
-some standard wording for such things.} 
-
-\npara{8} The procedure for an Appeal Hearing is detailed in section 4 below.
-\fixme{duplicate heading}
+\npara{7} Before the Hearing, the process owner will provide the Panel with a
+written rebuttal to the appeal within 5 working days of the appeal being
+received.  (Exceptions will be made to accommodate persons being at sea or
+subject to other serious limitations in availability.)  The Panel will forward
+that rebuttal to the appellant.
 
 
 \subsection{The Appeal Hearing}
@@ -169,39 +166,37 @@ some standard wording for such things.}
 \begin{enumerate}
 
 \item The Chair of the Panel will direct the flow of the Hearing, making sure
-    both parties are properly heard\add{,} and directing questioning;
+    both parties are properly heard, and directing questioning;
 
 \item The Chair of the Panel will first invite the appellant to present and
-    explain their case; this will be followed by an invitation \delete{for}
-    \add{to} the faculty member owner for a rebuttal;
+    explain their case; this will be followed by an invitation to the faculty
+    member owner for a rebuttal;
 
 \item Neither the appellant nor the owner can ask questions during these
     presentations; however, any Panel member may interrupt the presentation to
     ask questions;
 
 \item At the end of the presentations, the appellant will be invited to direct
-questions to the faculty owner for the purpose of seeking clarifications
-(only); after that is completed, the faculty owner will be invited to do the
-same;  the Panel members may interrupt these questioning sessions at any
-time to ask their own questions; the Chair of the panel will ensure that this
-\delete{questing}\add{questioning} remains civil and on topic;
+    questions to the faculty owner for the purpose of seeking clarifications
+    (only); after that is completed, the faculty owner will be invited to do
+    the same;  the Panel members may interrupt these questioning sessions at
+    any time to ask their own questions; the Chair of the panel will ensure
+    that this questioning remains civil and on topic;
 
 \item At the end of the questioning, the Chair of the Panel will ask the
-    appellant and faculty owner to leave and convene an \delete{in camera}
-    \add{\emph{in-camera}} discussion of the presentations and Appeal Document,
-    the Panel will decide on the validity of the appeal and of requested
-    resolution.
+    appellant and faculty owner to leave and convene an \emph{in-camera}
+    discussion of the presentations and Appeal Document, the Panel will decide
+    on the validity of the appeal and of requested resolution.
 
 \end{enumerate}
 
 \npara{2} The Chair of the Panel will communicate, in writing, the decision of
-the Panel within 3 working days (except if sea-time interferes).  \fixme{see a
-previous note about sea time}
+the Panel within 3 working days (except for serious time conflicts such as
+noted those mentioned at \ref{sec:the_ad_hoc_appeal_panel}.7 above).
 
 \npara{3} In an appeal process, the student has the right to representation.
 The student is required to inform the Chair of the Panel, in writing, if s/he
-will have a representative at the appeal\add{,} or \add{intends to} call
-witnesses. 
+will have a representative at the appeal, or intends to call witnesses. 
 
 \npara{4} Witnesses may be called by either party, but only if those witnesses
 can testify about direct knowledge of the matter.  No character or indirect
@@ -211,12 +206,8 @@ significance to the Hearing.  The Chair of the Panel will then inform the other
 party of the witness(es).  
 
 \npara{5} No persons providing solely moral support can be present at a
-Hearing.  A person providing aid to someone with a disability is permitted,
-which may include translation.  Such a person cannot testify at a Hearing.
-\fixme{I'm confused on 'translation'. Does this mean e.g. someone who would
-sign, to aid someone with difficulty hearing? If it means translation for
-language, does this make sense? Isn't English the stated language of business
-at Dalhousie?}
+Hearing.  A person providing aid to someone with a disability is permitted, as
+is a translator, but such persons cannot testify at a Hearing.
 
 
 \subsection{Supplementary Points}
@@ -238,52 +229,52 @@ graduate student will be referred directly to the Faculty of Graduate Studies
 for resolution.  
 
 
-\subsection{\label{sec:grade_reassessment}Grade Reassessment (Re-grading)}
-
-\fixme{Earlier, it says we just follow university rules. It seems best to do
-that, rather than to write something here that could be wrong. I confess I
-don't really understand the system of the two levels. What I read here is
-consistent with what I've seen done in the past (e.g. I regraded an exam for
-Barry Ruddick's class, once).}
-
-\npara{1} A request to re-grade a written exam or test follows the procedures
-set by the University's Registrar.
-
-\npara{2} A grade cannot be both reassessed via the Registrar's Office and
-appealed to the Department, under the rules in this document.  A student must
-choose one procedure or the other, as they are mutually exclusive.  Under
-normal circumstances a student should ask for a re-grading, unless there is
-evidence of bias, irregularity, unfairness in the administration of the exam,
-or inappropriate expectation.   
-
-\npara{3} When the Department receives a re-grading request, the instructor of
-the course will prepare the following materials:
-
-\begin{enumerate}
-
-\item  A list of at least two independent other professors (including contact
-information), either within or outside of the University, who are sufficiently
-knowledgeable of the topic in question, so as to be suitable to re-grade the
-exam.  (Real and apparent conflicts of interest must be avoided in choosing
-these re-assessors.) 
-
-\item A copy of the exam in question, along with a template of ``optimal''
-    answers for each question.
-
-\item Copies of at least one student-completed exam at both the A and B grade
-levels, fully de-personalized.  
-
-\item A fully de-personalized copy of the completed exam being re-graded.
-
-\end{enumerate}
-
-\npara{4} The above materials will be given to the Chair of the Department who
-will then contact the re-assessors and forward the materials if they accept the
-re-grading task.  The re-grading should be complete within two weeks of receipt
-of the material by the re-assessors.  
-
-\npara{5} Communication of the results of the re-assessment will follow
-Registrar procedures.   
-
+% \subsection{\label{sec:grade_reassessment}Grade Reassessment (Re-grading)}
+% 
+% \fixme{Earlier, it says we just follow university rules. It seems best to do
+% that, rather than to write something here that could be wrong. I confess I
+% don't really understand the system of the two levels. What I read here is
+% consistent with what I've seen done in the past (e.g. I regraded an exam for
+% Barry Ruddick's class, once).}
+% 
+% \npara{1} A request to re-grade a written exam or test follows the procedures
+% set by the University's Registrar.
+% 
+% \npara{2} A grade cannot be both reassessed via the Registrar's Office and
+% appealed to the Department, under the rules in this document.  A student must
+% choose one procedure or the other, as they are mutually exclusive.  Under
+% normal circumstances a student should ask for a re-grading, unless there is
+% evidence of bias, irregularity, unfairness in the administration of the exam,
+% or inappropriate expectation.   
+% 
+% \npara{3} When the Department receives a re-grading request, the instructor of
+% the course will prepare the following materials:
+% 
+% \begin{enumerate}
+% 
+% \item  A list of at least two independent other professors (including contact
+% information), either within or outside of the University, who are sufficiently
+% knowledgeable of the topic in question, so as to be suitable to re-grade the
+% exam.  (Real and apparent conflicts of interest must be avoided in choosing
+% these re-assessors.) 
+% 
+% \item A copy of the exam in question, along with a template of ``optimal''
+%     answers for each question.
+% 
+% \item Copies of at least one student-completed exam at both the A and B grade
+% levels, fully de-personalized.  
+% 
+% \item A fully de-personalized copy of the completed exam being re-graded.
+% 
+% \end{enumerate}
+% 
+% \npara{4} The above materials will be given to the Chair of the Department who
+% will then contact the re-assessors and forward the materials if they accept the
+% re-grading task.  The re-grading should be complete within two weeks of receipt
+% of the material by the re-assessors.  
+% 
+% \npara{5} Communication of the results of the re-assessment will follow
+% Registrar procedures.   
+% 
 
 
