existing course info

--- a/appeals.tex
+++ b/appeals.tex
@@ -1,25 +1,26 @@
-\section{Procedures for Student Academic Appeals and Governance of the Ad Hoc
-Appeal Committee}
+\section{Procedures for Student Academic Appeals}
+%and Governance of the Ad Hoc Appeal Committee}
 
 \subsection{Introduction}
 
-\npara{1} The procedures detailed below will be followed in cases where a
+\cp
+\p The procedures detailed below will be followed in cases where a
 student wishes to appeal an academic procedure, other than a grade, on the set
 of criteria detailed in section 2 below. (Grade appeals are handled by the
 University's Registrar.)
 
-\npara{2} The regulations and procedures given below cover appeals launched by
+\p The regulations and procedures given below cover appeals launched by
 both undergraduate and graduate students in the Department of Oceanography at
 Dalhousie University.  
 
-\npara{3} These procedures do not apply to labor disputes between an employee
+\p These procedures do not apply to labor disputes between an employee
 (be that person a student, post-doc, etc.) and an employer (faculty, staff) in
 regard to working conditions.  Persons wishing to dispute a labor condition
 should consult either the Chair of the Department and/or their union agreement,
 if applicable, or the laws governing labour relations in Nova Scotia and the
 procedures detailed therein. 
 
-\npara{4} These regulations do not apply if the cause of the dispute centers
+\p These regulations do not apply if the cause of the dispute centers
 on discrimination based on gender, race, nationality, sexual orientation,
 gender identity, official language, or disability.  The complainant in such
 cases must contact the Dalhousie Office of Human Rights, Equity \& Harassment
@@ -27,20 +28,21 @@ Prevention for procedures in such cases.  Nor are these regulations applicable
 to cases of sexual harassment, assault, criminality, etc., where Dalhousie
 Security or Law Enforcement should be involved.  
 
-\npara{5} There are no appeals on admission decisions, including transfers to
+\p There are no appeals on admission decisions, including transfers to
 the PhD program.  
 
 \subsection{Basis for an Appeal}
+\cp
 
-\npara{1} The procedures below apply to the administration of qualifying and
+\p The procedures below apply to the administration of qualifying and
 preliminary examinations, comprehensive examinations, thesis proposal defenses,
 and Master's thesis defenses.  Results (grades) of such examinations cannot be
 appealed as oral portions cannot be regraded.  
 
-\npara{2} Appeals related to Doctoral defenses must be directed to Faculty of
+\p Appeals related to Doctoral defenses must be directed to Faculty of
 Graduate Studies in the first instance. 
 
-\npara{3} Appeals of course examination grades (re-grading) are direct through
+\p Appeals of course examination grades (re-grading) are direct through
 the University Registrar's Office.
 %, and not the Department of Oceanography.
 %Some clarification on the method of reassessment is given below in
@@ -48,7 +50,7 @@ the University Registrar's Office.
 %procedures set by the Registrar. \fixme{should we just leave the rules to the
 %registrar, thus axiomatically avoiding contradiction?}
  
-\npara{4} The grounds for appeal are limited to the following:
+\p The grounds for appeal are limited to the following:
 \begin{enumerate} \item procedural unfairness \item bias \item irregularity in
         procedure \item inappropriate or unfair expectation(s) \end{enumerate}
 
@@ -75,11 +77,11 @@ process.
 For all these grounds, the onus is on the appellant to prove, through factual
 documentation, that such conditions existed. 
 
-\npara{5} A written appeal must be submitted to the Chair of the Department of
+\p A written appeal must be submitted to the Chair of the Department of
 Oceanography within 30 days following the event or circumstances being
 appealed. 
 
-\npara{6} The appeal submission must include:
+\p The appeal submission must include:
 \begin{enumerate}
 
 \item A description of the exact nature of the appeal, including a summary of
@@ -93,7 +95,7 @@ appealed.
 
 \end{enumerate}
 
-\npara{7} The submission of an appeal will engender the following actions by
+\p The submission of an appeal will engender the following actions by
 the Chair of the Department:
 
 \begin{enumerate}
@@ -107,10 +109,10 @@ Panel are detailed below in section~\ref{sec:the_ad_hoc_appeal_panel}.
 
 \end{enumerate}
 
-\npara{7} Decisions of the Ad Hoc Appeal Panel are forwarded to the Chair, who
+\p Decisions of the Ad Hoc Appeal Panel are forwarded to the Chair, who
 will communicate the decision in writing to the appellant.
 
-\npara{8} Decisions of the Ad Hoc Appeal Panel are subject to further appeal to
+\p Decisions of the Ad Hoc Appeal Panel are subject to further appeal to
 the Faculty of Science (undergraduates) or the Faculty of Graduate Studies
 (graduate students), or Senate, as regulations in those administrative units
 specify. 
@@ -118,16 +120,18 @@ specify.
 
 \subsection{\label{sec:the_ad_hoc_appeal_panel}The Ad Hoc Appeal Panel}
 
-\npara{1} Decisions on appeals are made by an Ad Hoc Appeal Panel.
+\cp
 
-\npara{2} The Panel does not have fixed membership.  Instead, it will consist
+\p Decisions on appeals are made by an Ad Hoc Appeal Panel.
+
+\p The Panel does not have fixed membership.  Instead, it will consist
 of three faculty members, chosen on a fixed rotating basis from all the faculty
 in the Department.  The professor(s) responsible for the process being appealed
 will be excluded.  For graduate students, the student's supervisor or
 co-supervisors, or for undergraduates, the student's honors supervisor (if
 applicable) will also be excluded from the list.
 
-\npara{3} An appropriate graduate student (for undergraduate appeals) or
+\p An appropriate graduate student (for undergraduate appeals) or
 Post-doctoral fellow (for graduate appeals) will constitute the fourth and
 final member of the Panel.  Any student on the Panel will not have a personal
 or academic conflict of interest with respect to the appellant.  For
@@ -135,7 +139,7 @@ undergraduates, the student will be chosen from the graduate students.  For
 graduate students, the student member will be chosen from the Post-doctoral
 Fellows, without conflict of interest.  
 
-\npara{4} The Panel will examine the appeal and determine if a \emph{prima
+\p The Panel will examine the appeal and determine if a \emph{prima
 facie} case exists for the appeal.  (\emph{Prima facie} in this context means
 the appeal document contains sufficient evidence to support the stated claim.)
 If such a case exists, then the Panel will convene a formal Appeal Hearing at
@@ -145,14 +149,14 @@ on the appeal, but preferably within three weeks of constitution of the Panel.
 If there is no \emph{prima facie} case, the Panel will inform the Chair and the
 appeal will be dismissed at the Departmental level.
 
-\npara{5} If a Hearing is convened, the Panel will chose a Chair who will
+\p If a Hearing is convened, the Panel will chose a Chair who will
 control and direct all communication.
 
-\npara{6} The Chair of the Panel will make the faculty owner of the process
+\p The Chair of the Panel will make the faculty owner of the process
 aware of the appeal and provide, in a timely manner, a copy of the appeal
 document to the process-owner (faculty member).  
 
-\npara{7} Before the Hearing, the process owner will provide the Panel with a
+\p Before the Hearing, the process owner will provide the Panel with a
 written rebuttal to the appeal within 5 working days of the appeal being
 received.  (Exceptions will be made to accommodate persons being at sea or
 subject to other serious limitations in availability.)  The Panel will forward
@@ -160,8 +164,9 @@ that rebuttal to the appellant.
 
 
 \subsection{The Appeal Hearing}
+\cp
 
-\npara{1} The Hearing will adhere to the following steps:
+\p The Hearing will adhere to the following steps:
 
 \begin{enumerate}
 
@@ -190,41 +195,43 @@ that rebuttal to the appellant.
 
 \end{enumerate}
 
-\npara{2} The Chair of the Panel will communicate, in writing, the decision of
+\p The Chair of the Panel will communicate, in writing, the decision of
 the Panel within 3 working days (except for serious time conflicts such as
 noted those mentioned at \ref{sec:the_ad_hoc_appeal_panel}.7 above).
 
-\npara{3} In an appeal process, the student has the right to representation.
+\p In an appeal process, the student has the right to representation.
 The student is required to inform the Chair of the Panel, in writing, if s/he
 will have a representative at the appeal, or intends to call witnesses. 
 
-\npara{4} Witnesses may be called by either party, but only if those witnesses
+\p Witnesses may be called by either party, but only if those witnesses
 can testify about direct knowledge of the matter.  No character or indirect
 testimony is permitted.  The Panel Chair must be informed 72-hours before a
 Hearing if a witness(es) will be called, along with that person's identity and
 significance to the Hearing.  The Chair of the Panel will then inform the other
 party of the witness(es).  
 
-\npara{5} No persons providing solely moral support can be present at a
+\p No persons providing solely moral support can be present at a
 Hearing.  A person providing aid to someone with a disability is permitted, as
 is a translator, but such persons cannot testify at a Hearing.
 
 
 \subsection{Supplementary Points}
 
-\npara{1} The Ad Hoc Appeal Panel has no jurisdiction to hear student appeals
+\cp
+
+\p The Ad Hoc Appeal Panel has no jurisdiction to hear student appeals
 on a matter involving a requested exemption from the application of
 Departmental, Faculty or University regulations or procedures, except when
 irregularities or unfairness in the application thereof is alleged.  This means
 that only procedural issues, and not the merits of the regulations, are subject
 to appeal.
 
-\npara{2} The Ad Hoc Appeal Panel may not render decisions counter to
+\p The Ad Hoc Appeal Panel may not render decisions counter to
 Departmental, Faculty or University regulations, nor can it make decisions that
 go beyond strictly academic matters, e.g., financial or administrative.  If the
 requested resolution contains such points, these must be ignored and dismissed.   
 
-\npara{3} Matters involving allegations of ``failure to supervise'' by a
+\p Matters involving allegations of ``failure to supervise'' by a
 graduate student will be referred directly to the Faculty of Graduate Studies
 for resolution.  
 
