reword appeals grounds to fit BB paragraph model

--- a/appeals.tex
+++ b/appeals.tex
@@ -50,32 +50,58 @@ the University Registrar's Office.
 %procedures set by the Registrar. \fixme{should we just leave the rules to the
 %registrar, thus axiomatically avoiding contradiction?}
  
-\p The grounds for appeal are limited to the following:
-\begin{enumerate} \item procedural unfairness \item bias \item irregularity in
-        procedure \item inappropriate or unfair expectation(s) \end{enumerate}
+\p The grounds for appeal are limited to the following.  For all these grounds,
+the onus is on the appellant to prove, through factual documentation, that such
+conditions existed. 
 
-``Procedural Unfairness'' means that the method used to administer the academic
-process, e.g., an exam, was unreasonably and inherently stacked against any
-person attempting the process.  Note: exams and their content, in and of
-themselves, are not procedurally unfair.  Differences in how an exam is
-administered between the sub-disciplines in the Department also does not
-constitute unfairness, as long as the method is applied consistently within
-that sub-discipline.  
+\begin{enumerate}
 
-``Bias'' means that the process was conducted in such a way as to disadvantage the
-particular appellant, relative to other persons undertaking the same process.    
+    \item Procedural Unfairness.  (This means that the method used to
+        administer the academic process, e.g., an exam, was unreasonably and
+        inherently stacked against any person attempting the process.  Note:
+        exams and their content, in and of themselves, are not procedurally
+        unfair.  Differences in how an exam is administered between the
+        sub-disciplines in the Department also does not constitute unfairness,
+        as long as the method is applied consistently within that
+        sub-discipline.)
 
-``Irregularity in procedure'' means that the process did not follow the
-procedures set in the regulations and guidelines governing the actions of the
-Department and its faculty.  
+`
+    \item Bias. (This means that the process was conducted in such a way as to
+        disadvantage the particular appellant, relative to other persons
+        undertaking the same process.)
 
-``Inappropriate or unfair expectation'' means that the deliverable of the
-process could not reasonably be expected of a person who undertakes
-assiduously, genuinely, and accurately the steps leading to completion of that
-process.   
+    \item Irregularity in Procedure. (This means that the process did not
+        follow the procedures set in the regulations and guidelines governing
+        the actions of the Department and its faculty.)
 
-For all these grounds, the onus is on the appellant to prove, through factual
-documentation, that such conditions existed. 
+    \item Inappropriate or Unfair Expectation(s). This means that the
+        deliverable of the process could not reasonably be expected of a person
+        who undertakes assiduously, genuinely, and accurately the steps leading
+        to completion of that process.) 
+
+
+\end{enumerate}
+
+% ``Procedural Unfairness'' means that the method used to administer the academic
+% process, e.g., an exam, was unreasonably and inherently stacked against any
+% person attempting the process.  Note: exams and their content, in and of
+% themselves, are not procedurally unfair.  Differences in how an exam is
+% administered between the sub-disciplines in the Department also does not
+% constitute unfairness, as long as the method is applied consistently within
+% that sub-discipline.  
+%
+% ``Bias'' means that the process was conducted in such a way as to disadvantage the
+% particular appellant, relative to other persons undertaking the same process.    
+%
+%``Irregularity in procedure'' means that the process did not follow the
+%procedures set in the regulations and guidelines governing the actions of the
+%Department and its faculty.  
+%
+%``Inappropriate or unfair expectation'' means that the deliverable of the
+%process could not reasonably be expected of a person who undertakes
+%assiduously, genuinely, and accurately the steps leading to completion of that
+%process.   
+
 
 \p A written appeal must be submitted to the Chair of the Department of
 Oceanography within 30 days following the event or circumstances being
