--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -153,15 +153,17 @@ Timetable for Oceanography
 %A1.2	THESIS CODE
 \subsection{Thesis Code}
 
-Students must register at least one month prior to the beginning of each term.
+\cp
 
-Students must register for the Thesis Code in all three terms for the duration
+\p Students must register at least one month prior to the beginning of each term.
+
+\p Students must register for the Thesis Code in all three terms for the duration
 of their program. Failure to do so in a term during which formal classes are
 not being taken will result in a blank term on the student's transcript, which
 means that there will be no documentation demonstrating that work was done on
 the thesis.
 
-The CRN for each term can be found in the Academic Timetable under the
+\p The CRN for each term can be found in the Academic Timetable under the
 Oceanography course listings (MSc – OCEA 9000, PhD – OCEA 9530).
 
 
@@ -330,20 +332,20 @@ required documentation.
 to the anniversary of their admission date. Failure to submit this report will
 result in delays in registration and funding.
 
-\p This report is made with the \di{Graduate Student Information System} (GSIS)
+\p This report is made with the Graduate Student Information System (GSIS)
 through DalOnline\footnote{DalOnline
 \href{https://dalonline.dal.ca}{\ExternalLink}.}.  The supervisor and the
 Graduate Coordinator must approve this report electronically, and students
 should bear this in mind so that the deadline can be met.
 
-\p A hard copy of the Oceanography \di{Supplementary Program Report Form}
+\p A hard copy of the Oceanography ``\di{supplementary program report form}''
 (available from the Graduate Secretary) must also be approved by your
 supervisor and the Graduate Coordinator, and submitted to the Graduate
 Secretary annually, following the same deadline as the Annual Progress Report.
 
-\p The \di{Supplementary Program Report Form} is intended to be saved
+\p The \di{supplementary program report form} is intended to be saved
 electronically and added to on a regular basis, similar to a CV. An up-to-date
-copy of the \di{Supplementary Program Report Form} is to be brought to all
+copy of the \di{supplementary program report form} is to be brought to all
 meetings with the Graduate Coordinator.
 
 
@@ -511,9 +513,9 @@ who is a faculty member in the Department.
 higher, at least three of which must be chosen from the introductory core
 courses (refer to section~\ref{sec:core_courses}).
 
-\p Any student who anticipates a \di{transfer from the MSc program to the PhD
-program} should complete the course-work and other requirements as listed in
-the PhD program requirements.
+\p Any student who anticipates a \index{transfer from MSc to PhD} transfer from
+the MSc program to the PhD program should complete the course-work and
+other requirements as listed in the PhD program requirements.
 
 %B2	MSc COMMITTEE STRUCTURE
 \subsection{MSc committee structure}
@@ -1289,8 +1291,8 @@ completion of the thesis examination.
 \p Dalhousie Graduate Fellowships will normally be provided for two years for an
 MSc student and four years for a PhD student.
 
-\p Scholarship support is provided directly to some students by the \di{Natural
-Sciences and Engineering Research Council} (\di{NSERC}), the \di{Killam
+\p Scholarship support is provided directly to some students by the Natural
+Sciences and Engineering Research Council (\di{NSERC}), the \di{Killam
 Foundation} through Dalhousie, by companies, and by other agencies, both
 national and international. Students are encouraged to apply for external
 support whenever possible.
