--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -373,14 +373,15 @@ from their initial registration in the program.
 \p The Thesis \advcom must be formed within one month of the start of the
 student's program.
 
-\p The supervisor will select a provisional committee, in consultation with the
-student. A \di{Graduate Student Program Form} listing the \di{Advisory
-Committee} members must be submitted to the Graduate Secretary.
+\p The supervisor will select a provisional committee, in
+consultation with the student. A \di{Graduate Student
+Program Form} listing the \advcom members must be
+submitted to the Graduate Secretary.
 
 \p Membership on an \advcom is flexible and may change during the course of a
 student's program. Students must complete a \di{Graduate Student Program Update
 Form} when a decision to make changes to committee membership is made. The
-\di{Advisory Committee} structure differs for MSc and PhD, as explained in
+\advcom structure differs for MSc and PhD, as explained in
 sections~\ref{sec:msc_program_requirements} and
 \ref{sec:phd_program_requirements}.
 
@@ -722,7 +723,7 @@ copy of the report will be provided to the Graduate Secretary.
 
 \cp
 
-\p A request to \di{transfer from the MSc program to the PhD program} should be
+\p A request to \index{transfer from MSc to PhD} transfer from the MSc program to the PhD program should be
 completed no later than one month prior to the anniversary of the student's
 admission date.
 
