--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -105,18 +105,44 @@
 }
 \renewcommand{\baselinestretch}{1.0}\normalsize
 
+
+\section{\label{sec:glossary}Glossary of acronyms and terms}
+
+The following list explains some acronyms and special terms used in this
+document.
+
+\begin{itemize}
+
+    \item ``CRN'' refers to a Course Registration Number. For example, the
+        Physical Oceanography core class, listed as OCEA~5120 in the University
+        Calendar, has CRN 12070. Consult the Registrar's website\footnote{Registrars website of Oceanography classes \href{https://dalonline.dal.ca/PROD/fysktime.P_DisplaySchedule?s_term=201710,201720&s_subj=OCEA&s_district=100}{\ExternalLink}.}
+
+    \item ``External'' \fixme{write a few lines here, with the 3 types
+        discussed in the meeting of 20160527}.
+
+    \item ``FGS''  stands for Faculty of Graduate Studies.
+
+    \item ``NSERC'' stands for Natural Science and Engineering Research
+        Council, a funding agency.
+
+\end{itemize}
+
+
 % A.	GENERAL  PROGRAM REQUIREMENTS
 \section{\label{sec:general_program_requirements}General Program Requirements}
 
 %A1	REGISTRATION
 \subsection{Registration}
 
-\p Graduate students must maintain their registration in all three terms until
-their program is completed, except in cases where a formal \di[leave of
+\p Graduate students must maintain their registration in all three terms of
+each year in their program, except in cases where a formal \di[leave of
 absence]{Leave of Absence} has been approved by the Faculty of Graduate
 Studies.
 
-\p Registration consists of:
+\fixme{I don't understand what REGN etc even means. I'll just rewrite this
+junk after I ask a student what they do.}
+
+\p Registration consists of
 \begin{enumerate}
     \item REGN 9999
     \item Thesis Code
